--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="hd">
         <a href="pages/subscribe.html" class="subButton">Subscribe</a>
         <h2 class="title">Welcome</h2>
-        <i class="material-icons">search</i>
+        <i class="material-icons iconConfig">search</i>
       </div>
     </header>
     <div class="site">
@@ -33,21 +33,21 @@
       </div>
       <div class="pt">
         <div class="postCard">
-          <h2>Welcome to my first post</h2>
+          <h2 class="heading">Welcome to my first post</h2>
           <p>This is some text</p>
           <a href="pages/post.html"><p>Find out more....</p></a>
         </div>
         <div class="postCard">
-          <h2>Welcome to my second post</h2>
+          <h2 class="heading">Welcome to my second post</h2>
           <p>This is some text</p>
           <a href="pages/post.html"><p>Find out more....</p></a>
         </div>
         <div class="postCard">
-          <h2>Welcome to my third post</h2>
+          <h2 class="heading">Welcome to my third post</h2>
           <p>This is some text</p>
         </div>
         <div class="postCard">
-          <h2>Welcome to my fourth post</h2>
+          <h2 class="heading">Welcome to my fourth post</h2>
           <p>This is some text</p>
         </div>
       </div>
