--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -21,7 +21,7 @@
       <div class="hd">
         <a href="../index.html" class="subButton">Home</a>
         <h2 class="title">Subscribe</h2>
-        <i class="material-icons">search</i>
+        <i class="material-icons iconConfig">search</i>
       </div>
     </header>
     <div class="subscribePage">
