update per comments from reviewer

--- a/index.html
+++ b/index.html
@@ -12,20 +12,25 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
   <body>
     <header>
       <div class="hd">
-        <a href="pages/subscribe.html" class="subButton">Subscribe</a>
         <h2 class="title">Welcome</h2>
-        <i class="material-icons iconConfig">search</i>
+        <div class="navBar">
+          <a href="index.html">Home</a>
+          <a href="pages/about.html">About</a>
+          <a href="pages/search.html">Search</a>
+          <a href="pages/subscribe.html" class="subButton">Subscribe</a>
+        </div>
+        <!-- <i class="material-icons iconConfig">search</i> -->
       </div>
     </header>
     <div class="site">
       <div class="sidebar">
-        <h1>About</h1>
+        <h1>My Blog</h1>
         <p>
           My name is Jesse. I'm studying/learning front end development to
           increse my skills as a developer.
@@ -33,26 +38,33 @@
       </div>
       <div class="pt">
         <div class="postCard">
-          <h2 class="heading">Welcome to my first post</h2>
+          <h2>Welcome to my first post</h2>
           <p>This is some text</p>
           <a href="pages/post.html"><p>Find out more....</p></a>
         </div>
         <div class="postCard">
-          <h2 class="heading">Welcome to my second post</h2>
+          <h2>Welcome to my second post</h2>
           <p>This is some text</p>
           <a href="pages/post.html"><p>Find out more....</p></a>
         </div>
         <div class="postCard">
-          <h2 class="heading">Welcome to my third post</h2>
+          <h2>Welcome to my third post</h2>
           <p>This is some text</p>
         </div>
         <div class="postCard">
-          <h2 class="heading">Welcome to my fourth post</h2>
+          <h2>Welcome to my fourth post</h2>
           <p>This is some text</p>
         </div>
       </div>
     </div>
     <footer>
+      <section class="socialIcons">
+        <p>Find me on social Media</p>
+        <div>
+          <a href="www.facebook.com" class="fa fa-facebook"></a>
+          <a href="www.twitter.com" class="fa fa-twitter"></a>
+        </div>
+      </section>
       <div class="ft">
         <p class="textSmall">Udacity Blog Project</p>
         <p class="textSmall">Jesse Anderson</p>
