--- a/pages/about.html
+++ b/pages/about.html
@@ -12,18 +12,14 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Subscribe</title>
+    <title>Who Am I?</title>
   </head>
   <body>
     <header>
       <div class="hd">
-        <h2 class="title">Subscribe</h2>
+        <h2 class="title">About</h2>
         <div class="navBar">
           <a href="../index.html">Home</a>
           <a href="about.html">About</a>
@@ -33,28 +29,25 @@
         <!-- <i class="material-icons iconConfig">search</i> -->
       </div>
     </header>
-    <div class="subscribePage">
-      <div class="subscribeHeader">
-        <h2>Sign up for my amazing mailing list</h2>
-        <p>Never miss a post.</p>
+    <div class="aboutBody">
+      <div class="aboutMeInfo">
+        <article>
+          <p>
+            My name is Jesse Anderson. I'm a mobile developer by trade, but
+            trying to learn the magic of being a front end developer. I'm not a
+            designer, as you can plainly see, but I do enjoy creating things
+            that people use. I'm hoping to use this as an oppertunity to expand
+            my skills and learn to create experainces that will delight users.
+          </p>
+          <p>
+            I have two wonderful kids, a loving wife, and a passion for coding.
+          </p>
+          <p>Welcome to my world!!</p>
+        </article>
       </div>
-      <div class="subscribeBody">
-        <form action="../index.html">
-          <label for="firstName" class="formText">First Name</label>
-          <input class="formField" type="text" />
-
-          <label for="lastName" class="formText">Last Name</label>
-          <input class="formField" type="text" />
-
-          <label for="emailAddress" class="formText">Email Address</label>
-          <input class="formField" type="text" />
-
-          <label for="consent" class="formText"
-            >Do you accept the terms of use?</label
-          >
-          <input class="formField" type="checkbox" />
-          <button class="subscribeButton">Submit</button>
-        </form>
+      <div class="imageArea">
+        <div class="aboutImage"></div>
+        <div class="aboutText"><figcaption>My loving family.</figcaption></div>
       </div>
     </div>
     <footer>
