--- a/pages/search.html
+++ b/pages/search.html
@@ -12,18 +12,14 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Subscribe</title>
+    <title>Search Blog</title>
   </head>
   <body>
     <header>
       <div class="hd">
-        <h2 class="title">Subscribe</h2>
+        <h2 class="title">Search</h2>
         <div class="navBar">
           <a href="../index.html">Home</a>
           <a href="about.html">About</a>
@@ -33,36 +29,13 @@
         <!-- <i class="material-icons iconConfig">search</i> -->
       </div>
     </header>
-    <div class="subscribePage">
-      <div class="subscribeHeader">
-        <h2>Sign up for my amazing mailing list</h2>
-        <p>Never miss a post.</p>
-      </div>
-      <div class="subscribeBody">
-        <form action="../index.html">
-          <label for="firstName" class="formText">First Name</label>
-          <input class="formField" type="text" />
-
-          <label for="lastName" class="formText">Last Name</label>
-          <input class="formField" type="text" />
-
-          <label for="emailAddress" class="formText">Email Address</label>
-          <input class="formField" type="text" />
-
-          <label for="consent" class="formText"
-            >Do you accept the terms of use?</label
-          >
-          <input class="formField" type="checkbox" />
-          <button class="subscribeButton">Submit</button>
-        </form>
-      </div>
-    </div>
+    <div class="searchBody"></div>
     <footer>
       <section class="socialIcons">
         <p>Find me on social Media</p>
         <div>
-          <a href="www.facebook.com" class="fa fa-facebook"></a>
-          <a href="www.twitter.com" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
         </div>
       </section>
       <div class="ft">
