working through ruberic

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="hd">
         <h2 class="title">Welcome</h2>
         <div class="navBar">
-          <a href="index.html">Home</a>
-          <a href="pages/about.html">About</a>
-          <a href="pages/search.html">Search</a>
-          <a href="pages/subscribe.html" class="subButton">Subscribe</a>
+          <a href="index.html" class="navLink">Home</a>
+          <a href="pages/about.html" class="navLink">About</a>
+          <a href="pages/search.html" class="navLink">Search</a>
+          <a href="pages/subscribe.html" class="navLink">Subscribe</a>
         </div>
         <!-- <i class="material-icons iconConfig">search</i> -->
       </div>
@@ -40,12 +40,12 @@
         <div class="postCard">
           <h2>Welcome to my first post</h2>
           <p>This is some text</p>
-          <a href="pages/post.html"><p>Find out more....</p></a>
+          <a href="pages/post.html" class="postButton">More....</a>
         </div>
         <div class="postCard">
           <h2>Welcome to my second post</h2>
           <p>This is some text</p>
-          <a href="pages/post.html"><p>Find out more....</p></a>
+          <a href="pages/post.html" class="postButton">More....</a>
         </div>
         <div class="postCard">
           <h2>Welcome to my third post</h2>
@@ -61,8 +61,8 @@
       <section class="socialIcons">
         <p>Find me on social Media</p>
         <div>
-          <a href="www.facebook.com" class="fa fa-facebook"></a>
-          <a href="www.twitter.com" class="fa fa-twitter"></a>
+          <a href="www.facebook.com" class="fa fa-facebook socialIconsLink"></a>
+          <a href="www.twitter.com" class="fa fa-twitter socialIconsLink"></a>
         </div>
       </section>
       <div class="ft">
