--- a/pages/about.html
+++ b/pages/about.html
@@ -21,10 +21,10 @@
       <div class="hd">
         <h2 class="title">About</h2>
         <div class="navBar">
-          <a href="../index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="search.html">Search</a>
-          <a href="subscribe.html" class="subButton">Subscribe</a>
+          <a href="../index.html" class="navLink">Home</a>
+          <a href="about.html" class="navLink">About</a>
+          <a href="search.html" class="navLink">Search</a>
+          <a href="subscribe.html" class="navLink">Subscribe</a>
         </div>
         <!-- <i class="material-icons iconConfig">search</i> -->
       </div>
@@ -46,16 +46,20 @@
         </article>
       </div>
       <div class="imageArea">
-        <div class="aboutImage"></div>
-        <div class="aboutText"><figcaption>My loving family.</figcaption></div>
+        <figure>
+          <div class="aboutImage"></div>
+          <div class="aboutText">
+            <figcaption>My loving family.</figcaption>
+          </div>
+        </figure>
       </div>
     </div>
     <footer>
       <section class="socialIcons">
         <p>Find me on social Media</p>
         <div>
-          <a href="www.facebook.com" class="fa fa-facebook"></a>
-          <a href="www.twitter.com" class="fa fa-twitter"></a>
+          <a href="www.facebook.com" class="fa fa-facebook socialIconsLink"></a>
+          <a href="www.twitter.com" class="fa fa-twitter socialIconsLink"></a>
         </div>
       </section>
       <div class="ft">
