--- a/pages/search.html
+++ b/pages/search.html
@@ -21,21 +21,26 @@
       <div class="hd">
         <h2 class="title">Search</h2>
         <div class="navBar">
-          <a href="../index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="search.html">Search</a>
-          <a href="subscribe.html" class="subButton">Subscribe</a>
+          <a href="../index.html" class="navLink">Home</a>
+          <a href="about.html" class="navLink">About</a>
+          <a href="search.html" class="navLink">Search</a>
+          <a href="subscribe.html" class="navLink">Subscribe</a>
         </div>
         <!-- <i class="material-icons iconConfig">search</i> -->
       </div>
     </header>
-    <div class="searchBody"></div>
+    <div>
+      <form action="post.html">
+        <input placeholder="Search Blog" />
+        <button>Search</button>
+      </form>
+    </div>
     <footer>
       <section class="socialIcons">
         <p>Find me on social Media</p>
         <div>
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-facebook socialIconsLink"></a>
+          <a href="#" class="fa fa-twitter socialIconsLink"></a>
         </div>
       </section>
       <div class="ft">
