--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -25,10 +25,10 @@
       <div class="hd">
         <h2 class="title">Subscribe</h2>
         <div class="navBar">
-          <a href="../index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="search.html">Search</a>
-          <a href="subscribe.html" class="subButton">Subscribe</a>
+          <a href="../index.html" class="navLink">Home</a>
+          <a href="about.html" class="navLink">About</a>
+          <a href="search.html" class="navLink">Search</a>
+          <a href="subscribe.html" class="navLink">Subscribe</a>
         </div>
         <!-- <i class="material-icons iconConfig">search</i> -->
       </div>
@@ -39,7 +39,7 @@
         <p>Never miss a post.</p>
       </div>
       <div class="subscribeBody">
-        <form action="../index.html">
+        <form class="subscribeForm" action="../index.html">
           <label for="firstName" class="formText">First Name</label>
           <input class="formField" type="text" />
 
@@ -61,8 +61,8 @@
       <section class="socialIcons">
         <p>Find me on social Media</p>
         <div>
-          <a href="www.facebook.com" class="fa fa-facebook"></a>
-          <a href="www.twitter.com" class="fa fa-twitter"></a>
+          <a href="www.facebook.com" class="fa fa-facebook socialIconsLink"></a>
+          <a href="www.twitter.com" class="fa fa-twitter socialIconsLink"></a>
         </div>
       </section>
       <div class="ft">
